infra/envoy-gateway/networking/01-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ichika-gateway
spec:
  gatewayClassName: envoy-gateway
  addresses:
    - type: IPAddress
      value: 10.5.49.100
  listeners:
    # Darak Homelab (Production)
    - name: darak-prod
      hostname: "*.darak.cc"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              ichika.io/domain: darak
              ichika.io/env: prod
      tls:
        certificateRefs:
          - name: darak-prod-cert-tls
            namespace: darak-prod
    # Darak Homelab (Staging)
    - name: darak-stg
      hostname: "*.stg.darak.cc"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              ichika.io/domain: darak
              ichika.io/env: stg
      tls:
        certificateRefs:
          - name: darak-stg-cert-tls
            namespace: darak-stg

    # Onhouse (Production)
    - name: onhouse-prod
      hostname: "*.onhouse.com"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              ichika.io/domain: onhouse
              ichika.io/env: prod
      tls:
        certificateRefs:
          - name: onhouse-prod-cert-tls
            namespace: onhouse-prod
    # Onhouse (Staging)
    - name: onhouse-stg
      hostname: "*.stg.onhouse.com"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              ichika.io/domain: onhouse
              ichika.io/env: stg
      tls:
        certificateRefs:
          - name: onhouse-stg-cert-tls
            namespace: onhouse-stg
